[package]
name = "rustysn"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "rustysn"
path = "src/main.rs"

[dependencies]
tokio   = { version = "1", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
rand    = "0.8"
libc    = "0.2"
clap    = { version = "4", features = ["derive"] }
